self-hosted/home-assistant/001-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    app: homeassistant
